--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rentalx",
+  "name": "rentx",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -10,12 +10,16 @@
     "csv-parse": "^5.3.1",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.5.0",
+    "typeorm": "^0.3.10",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/multer": "^1.4.7",
+    "@types/node": "^18.11.3",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "ts-node-dev": "^2.0.0",
