--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.5.0",
+    "tsyringe": "4.4.0",
     "typeorm": "^0.2.31",
     "uuid": "^9.0.0"
   },
